# contextloop

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
backend/: __init__.py
backend/contextloop/: __init__.py  codex_auth.py  datahub_service.py  fixtures.py  main.py  models.py
backend/tests/: test_codex_auth.py  test_datahub_context.py  test_writeback_gate.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DESIGN_SPEC.md  DEVPOST_DESCRIPTION.md  DISCLOSURES.md  FINAL_SUBMISSION.md  RELEASE_EVIDENCE.md  REQUIREMENTS_MATRIX.md  SUBMISSION_CHECKLIST.md
examples/: impact-analysis.json  incident-memory.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/components/: AgentLoop.tsx  Brand.tsx  ChangeTrigger.tsx  FooterStatus.tsx  ImpactPanel.tsx  LineageCanvas.tsx
frontend/src/lib/: api.ts
scripts/: bootstrap.sh  dev.sh  verify.sh  verify_live.sh
