[project]
name = "contextloop"
version = "0.1.0"
description = "DataHub-powered schema change impact agent with Codex OAuth"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "datahub-agent-context==1.6.0.13",
  "fastapi>=0.116.0,<1.0",
  "pydantic>=2.11.0,<3.0",
  "uvicorn[standard]>=0.35.0,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<1.0",
  "pytest>=8.4.0,<9.0",
  "pytest-asyncio>=1.1.0,<2.0",
  "ruff>=0.12.0,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
